# Kadu

./: kadu  kadu-0.6.0.1.tar.bz2  kadu-0.6.5.2.tar.bz2  kadu-0.6.5.3.tar.bz2  kadu-0.6.5.4.tar.bz2  kadu-0.6.6-beta1.tar.bz2  kadu_0.6.5.4-rc1.orig.tar.bz2
debian/: README.Debian  README.source  build_kadu.sh  changelog  control  copyright  extract.sh  handle_external.sh  kadu-common.install  kadu-dev.install  kadu-dev.manpages  kadu-external-modules.install  kadu-gtk-modules.install  kadu-kde-modules.install  kadu-themes.install  kadu.desktop  kadu.dirs  kadu.docs  kadu.install  kadu.install.alsa  kadu.install.noalsa  kadu.lintian-overrides  kadu.manpages  kadu.menu  libkadu.install  postinst  postrm  prepare_install_files.sh  rules  watch
debian/manpages/: kadu-config.1  kadu-mozilla.1  kadu.1
debian/patches/: 01-configure-nostrip.patch  01-external-themes.patch  01-no_autodownload.patch  02-.config.patch  02-about-dialog.patch  02-external-plugins.patch  03-about-dialog.patch  03-cmake-fix.patch  03-exclude_unsupported_plugins.patch  03-install_libkadu_in_proper_dir.patch  03-no-CMAKE_CXX_FLAGS-overwrite.patch  04-backport_patch-only_send_jabber_status_to_server_when_connecting.patch  04-disable-tests.patch  04-gcc4.4-build-fix.patch  04-globalhotkeys.patch  04-icedove_email_client.patch  04-int_narrowing_fix.patch  04-jabber-protocol.patch  05-audacious_mediaplayer-spec.patch  05-hotfix_upstream.patch  05-icons_absolute_paths_fix.patch  05-kadu_completion_fix.patch  05-lib64-suffix-fix.patch  05-lowered_expectant_libgadu_version.patch  05-mpris_mediaplayer_0.6.6_fix.patch  05-panelkadu_lednotify-build-fix.patch  05-panelkadu_no-strict-aliasing.patch  06-mail.patch  06-mpris_player-harden-fix.patch  06-word_fix_0.6.6_fix.patch  series
external_modules/anonymous_check/: CMakeLists.txt  anonymous_check.desc
external_modules/globalhotkeys/: globalhotkeys.h  hotkey.cpp  hotkeyedit.h  spec
external_modules/kde_notify/: kde_notify.cpp
external_modules/led_notify/: led_blinker.h  led_driver.cpp  led_driver.cpp.win32  led_notify.desc
external_modules/mail/: CMakeLists.txt  certdialog.cpp
external_modules/mime_tex/: ChangeLog  mime_tex.cpp  tex_formula_dialog.h
external_modules/mx610_notify/: mx610_notify.cpp  mx610_notify.h
external_modules/nextinfo/: defines_stringencoder.h  extendedinformationwindow.cpp  gettags.h  spec
external_modules/pajacyk/: pajacyk.cpp  pajacyk.h
external_modules/panelkadu/: CMakeLists.txt
external_modules/plus_pl_sms/: CMakeLists.txt  sendthread.h  sms_plus_pl_gateway.h
external_modules/plus_pl_sms/translations/: plus_pl_sms_pl.ts
external_modules/water_notify/: ChangeLog  water_notify.h
externalmodules/anonymous_check/: CMakeLists.txt  anonymous_check.cpp  anonymous_check.desc
externalmodules/globalhotkeys/: CMakeLists.txt  api.cpp  api.h  buddiesmenu.cpp  buddiesmenu.h  changelog  conf.cpp  conf.h  defines.h  functions.cpp  functions.h  globalhotkeys.cpp  (+16 more)
externalmodules/led_notify/: CMakeLists.txt  led_notify.h
externalmodules/nextinfo/: CMakeLists.txt  buddynextinfodata.cpp  buddynextinfodata.h  changelog  defines.h  extendedinformationwidgets.cpp  extendedinformationwidgets.h  extendedinformationwindow.h  gettags.h  nextinfo.cpp  nextinfo.desc  nextinfo.h
externalmodules/nextinfo/configuration/: nextinfo.ui
externalmodules/nextinfo/translations/: nextinfo_de.ts  nextinfo_en.ts  nextinfo_fr.ts  nextinfo_it.ts  nextinfo_pl.ts
externalmodules/pajacyk/: CMakeLists.txt
externalmodules/pajacyk/configuration/: pajacyk.ui
externalplugins/anonymous_check/: CMakeLists.txt  ChangeLog  anonymous_check-module.cpp  anonymous_check-plugin.cpp  anonymous_check-plugin.h  anonymous_check.cpp  anonymous_check.desc  anonymous_check.h  anonymous_check.kdev4  anonymous_info.cpp  anonymous_info.h
externalplugins/anonymous_check/translations/: anonymous_check_pl.ts
externalplugins/import_history/: CMakeLists.txt  gadu-formatter.cpp  gadu-formatter.h  import_history.cpp  import_history.desc  import_history.h
externalplugins/import_history/gui/: gui.cpp  ui_import_history.h
externalplugins/import_history/importers/: importer.cpp
externalplugins/import_history/importers/gg7/: crc32.cpp  crc32.h  gg.h  ggimporter.cpp
externalplugins/import_history/importers/gg8/: gg8importer.cpp  gg8importer.h
externalplugins/import_history/translations/: update_ts_file
externalplugins/kadu_completion/: CMakeLists.txt  ChangeLog  completion_context.cpp  completion_context.h  kadu_completion.cpp  kadu_completion.desc  kadu_completion.h  kadu_completion_plugin.cpp  kadu_completion_plugin.h
externalplugins/mime_tex/: CMakeLists.txt  COPYRIGHT  ChangeLog  formula_view.cpp  formula_widget.cpp  mime_tex.cpp  mime_tex.desc  mime_tex.h  mime_tex_plugin.cpp  mime_tex_plugin.h  mime_tex_ui_handler.h  tex_formula_dialog.cpp
externalplugins/mime_tex/configuration/: mime_tex.ui
externalplugins/mime_tex/mimetex/: CMakeLists.txt  mimetex.c
externalplugins/nextinfo/: CMakeLists.txt  buddynextinfodata.cpp  buddynextinfodata.h  changelog  extendedinformationwidgets.cpp  extendedinformationwidgets.h  gettags.h  nextinfo.cpp  nextinfo.desc  nextinfo.h  photowidget.cpp  photowidget.h
externalplugins/nextinfo/translations/: nextinfo_cs.ts  nextinfo_en.ts  nextinfo_fr.ts  nextinfo_pl.ts
modules/globalhotkeys/: CMakeLists.txt  changelog  globalhotkeys.cpp  globalhotkeys.desc  hotkey.h  hotkeyedit.cpp
modules/kde_notify/: CMakeLists.txt  kde_notify.desc
modules/mx610_notify/: CMakeLists.txt  ChangeLog  News  mx610_notify.desc
modules/mx610_notify/translations/: mx610_notify_pl.ts
modules/nextinfo/: .configuration-ui-translations.cpp  CMakeLists.txt  defines.h  nextinfo.desc
modules/nextinfo/configuration/: nextinfo.ui
modules/senthistory/: .configuration-ui-translations.cpp  CMakeLists.txt  senthistory.cpp  senthistory.desc  spec
modules/senthistory/translations/: senthistory_pl.ts
modules/water_notify/: CMakeLists.txt  News  modver.h  water_notify.desc
modules/water_notify/configuration/: water_notify.ui
scripts/: create-package.sh
(+285 files in other folders)
